# TheCheatSheet

./: .gitignore  ESTIPS.MD  IMPLEMENTATION.txt  LICENSE  LinuxCommands.txt  README.MD  REQUIREMENTS.MD  some_cheatsheets.json
backend/: CMakeLists.txt  CodeSegment.hpp  Config.cc  Context.cc  Context.hpp  EsHelper.hpp  MongoHelper.cc  MongoHelper.hpp  README.MD  Tag.hpp  User.hpp  conanbuildinfo.cmake  conanbuildinfo.txt  conanfile.txt  conaninfo.txt  easydeploy.sh  graph_info.json  handler.hpp  main.cc  pom.xml  server.cc  server.hpp
backend/config/: Config.cc  Config.hpp
backend/controller/: BasicController.hpp  BodyController.cc  BodyController.hpp  CodeSegmentController.cc  CodeSegmentController.hpp  ErrorController.hpp  Handler.cc  Handler.hpp  ParamController.cc  ParamController.hpp  StrController.cc  StrController.hpp  TagController.cc  TagController.hpp  UserController.cc  UserController.hpp  handler.hpp
backend/controller/frame/: BasicController.hpp  HandlerResult.hpp  HttpException.hpp  ParamController.cc  ParamController.hpp
backend/entity/: CodeSegment.cc  CodeSegment.hpp  EntityHelper.cc  EntityHelper.hpp  Tag.hpp  User.hpp
backend/eshelper/: EsContext.cc  EsContext.hpp  EsHelper.cc  EsHelper.hpp
backend/httpserver/: ConrollerMapping.hpp  ControllerMapping.cc  ControllerMapping.hpp  server.cc  server.hpp
backend/lib/: CMakeLists.txt  httplib.cc  httplib.h
backend/mongohelper/: DataWithCount.hpp  MongoContext.cc  MongoContext.hpp  MongoHelper.cc  MongoHelper.hpp
backend/request/: RequestHelper.cc  RequestHelper.hpp
backend/src/main/java/com/thecheatsheet/CheatSheet/: CheatSheetApplication.java  ServletInitializer.java
backend/src/main/java/com/thecheatsheet/cheatsheet/: CheatSheetApplication.java  ServletInitializer.java
backend/src/main/java/com/thecheatsheet/cheatsheet/controller/: CodeSegmentController.java
backend/src/main/resources/: application.properties
backend/src/test/java/com/thecheatsheet/CheatSheet/: CheatSheetApplicationTests.java
backend/src/test/java/com/thecheatsheet/cheatsheet/: CheatSheetApplicationTests.java  ElasticSearchTest.java
backend/test/: CMakeLists.txt  EsTest.cc  MongoTest.cc  README.MD  ServerTest.js
backend/util/: CookieHelper.cc  CookieHelper.hpp  ReponseHelper.cc  RequestHelper.cc  RequestHelper.hpp  ResponseHelper.hpp  Utility.cc  Utility.hpp  logger.hpp
deploy/: README.MD  db.dockerfile  db.sql  deploy.sh  es.dockerfile  (+2 more)
(+17 files in other folders)
